--- a/css/style.css
+++ b/css/style.css
@@ -243,7 +243,7 @@ body.border-dark .main-content:after{
 	left:0;
 	height:100%;
 	width:100%;
-	background:#4d4d4d;
+	background:#303F9F;
 	opacity:.8;
 	z-index:-1;
 }
@@ -639,7 +639,7 @@ body.section-switching.up .animation-block{
 	font-size:14px;
 }
 .skill > .bar{
-	background:#E0E0E0;
+	background:#b9b9b9;
 }
 .skill > .bar > .percent{
 	background:#303F9F;
