--- a/css/style.css
+++ b/css/style.css
@@ -234,7 +234,9 @@ body.border-dark .main-content:after{
 =======================================================*/
 .section-main{
 	background-size:cover;
-	background-image:url(../img/bg.jpg);
+	/*background-image:url(../img/bg.jpg);*/
+	background-color: #424242;
+
 }
 .section-main:before{
 	content: ' ';
