--- a/css/style.css
+++ b/css/style.css
@@ -289,8 +289,8 @@ a.btn-custom{
 	font-size:11px;
 	font-weight:400;
 	display:inline-block;
-	display:inline;
-	zoom:1;
+	*display:inline;
+	*zoom:1;
 	line-height:1em;
 	padding:17px 32px;
 	position:relative;
