Color Changes In Projects

--- a/css/style.css
+++ b/css/style.css
@@ -1011,7 +1011,7 @@ body.section-switching.up .animation-block{
 }
 /*== Project Popup ==*/
 .mfp-bg{
-	background:#303F9F;
+	background:#00000083;
 }
 .my-mfp-zoom-in .zoom-anim-dialog {
 	opacity: 0;
