--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ img{
 	Menu
 =======================================================*/
 body.border-dark .menu-btn > .lines > span{
-	background:#303F9F;
+	background:#2c2c2c;
 }
 .menu-btn > .lines > .l2{
 	margin:6px 0;
