--- a/css/style.css
+++ b/css/style.css
@@ -643,7 +643,7 @@ body.section-switching.up .animation-block{
 	background:#b9b9b9;
 }
 .skill > .bar > .percent{
-	background:#303F9F;
+	background:#ffc62b;
 	width:10%;
 	height:6px;
 }
