Color Changes on Skills

--- a/css/style.css
+++ b/css/style.css
@@ -604,7 +604,7 @@ body.section-switching.up .animation-block{
 	font-size:54px;
 	line-height:54px;
 	vertical-align:middle;
-	color:#303F9F;
+	color:#2c2c2c;
 }
 .service > .content{
 	position:relative;
