--- a/css/style.css
+++ b/css/style.css
@@ -1211,12 +1211,17 @@ body.section-switching.up .animation-block {
         color: rgba(0, 0, 0, 0.4);
         margin: 0;
         margin-top: 5px;
-        text-decoration: none;
-        list-style: none;
 }
 
 .intagram-btn {
         text-decoration: none;
+        float: left;
+        font-size: 16px;
+        line-height: 1.6em;
+        font-style: italic;
+        color: rgba(0, 0, 0, 0.4);
+        margin: 0;
+        margin-top: 5px;
         list-style: none;
 }
 @media (min-width: 992px) {
