--- a/css/style.css
+++ b/css/style.css
@@ -1221,6 +1221,7 @@ body.section-switching.up .animation-block {
 
 .contact-info > p > a :hover {
         font-weight: bold;
+        color: rgba(0, 0, 0, 0.6);
 }
 
 @media (min-width: 992px) {
