--- a/css/style.css
+++ b/css/style.css
@@ -1217,6 +1217,7 @@ body.section-switching.up .animation-block {
 .contact-info > p > a {
         text-decoration: none;
         color: inherit;
+        transition: 0.4s ease-in-out;
 }
 
 .contact-info > p > a:hover {
